Preventing outline when `<audio>` element selected
When an `<audio>` element is selected in Chrome v81 on macOS an
outline is shown around it. The outline looks weird and out of
place, so this commit removes it. (Safari and Firefox don't appear
to show an outline).

--- a/web/beats.css
+++ b/web/beats.css
@@ -238,6 +238,7 @@ label {
 audio {
   width: 50%;
   vertical-align: top;
+  outline: none;  /* Prevent outline when selected in Chrome */
 }
 
 audio.home-page {
